@@ -27,7 +27,11 @@
 		<url/>
 	</scm>
   <properties>
-    <java.version>21</java.version>
+    <java.version>17</java.version>
+    <sonar.organization>dev-madhurendra</sonar.organization>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+    <sonar.exclusions>
+    </sonar.exclusions>
   </properties>
 
 	<dependencies>
@@ -170,8 +174,19 @@
 			<artifactId>spring-boot-starter-oauth2-client</artifactId>
 		</dependency>
 
+    <dependency>
+      <groupId>org.jacoco</groupId>
+      <artifactId>jacoco-maven-plugin</artifactId>
+      <version>0.8.8</version>
+    </dependency>
 
-	</dependencies>
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+  </dependencies>
 
 	<build>
 		<plugins>
@@ -182,9 +197,9 @@
         <version>3.11.0</version>
         <configuration>
           <release>${java.version}</release>
-          <compilerArgs>
-            <arg>--enable-preview</arg>
-          </compilerArgs>
+<!--          <compilerArgs>-->
+<!--            <arg>&#45;&#45;enable-preview</arg>-->
+<!--          </compilerArgs>-->
         </configuration>
       </plugin>
 
@@ -193,9 +208,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.1.2</version>
-        <configuration>
-          <argLine>--enable-preview</argLine>
-        </configuration>
+<!--        <configuration>-->
+<!--          <argLine>&#45;&#45;enable-preview</argLine>-->
+<!--        </configuration>-->
       </plugin>
 
 			<!-- Spring Boot Maven plugin for packaging and running the application -->
@@ -211,7 +226,44 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>0.8.8</version>
+      </plugin>
 		</plugins>
 	</build>
+
+  <profiles>
+    <profile>
+      <id>coverage</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>prepare-agent</id>
+                <goals>
+                  <goal>prepare-agent</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>report</id>
+                <goals>
+                  <goal>report</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 
 </project>
